# spectral-bridge

./: .gitignore  AGENTS.md  PROTOCOL.md  README.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yml
adapters/pass-through/: README.md  pyproject.toml
adapters/pass-through/src/spectral_bridge_passthrough/: app.py
adapters/pass-through/tests/: conftest.py  test_app.py
src/spectral_bridge/: __init__.py  client.py
src/spectral_bridge/cli/: main.py
tests/: conftest.py  test_client.py
