[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectral-bridge-adapter-pass-through"
version = "0.1.4"
description = "Pass-through adapter for spectral-bridge"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.135.2", "uvicorn>=0.42", "httpx>=0.28"]

[tool.hatch.build.targets.wheel]
packages = ["src/spectral_bridge_passthrough"]
